--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -153,18 +153,15 @@
             android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_weight="0.2"
             android:elevation="20dp"
             android:src="@drawable/ic_tick"
             app:backgroundTint="@color/green"
-
-            app:layout_constraintTop_toTopOf="@id/guideline_floatingBtn_top"
             app:layout_constraintBottom_toTopOf="@id/guideline_floatingBtn_bottom"
+
+            app:layout_constraintHorizontal_weight="0.2"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
-
-
-
+            app:layout_constraintTop_toTopOf="@id/guideline_floatingBtn_top" />
 
 
         <android.support.constraint.Guideline
