--- a/app/src/main/res/layout/acativity_aboutus.xml
+++ b/app/src/main/res/layout/acativity_aboutus.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg">
@@ -8,8 +9,10 @@
         android:id="@+id/rel1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layoutDirection="rtl"
         android:paddingTop="25dp"
-        android:paddingBottom="30dp">
+        android:paddingBottom="30dp"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <TextView
@@ -23,9 +26,18 @@
             android:id="@+id/lin1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layoutDirection="rtl"
             android:orientation="horizontal">
+
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="4dp"
+                android:src="@drawable/ic_chevron_right_white_24dp" />
 
             <TextView
                 android:id="@+id/tv_return"
@@ -35,61 +47,71 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="4dp" />
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="4dp"
-                android:src="@drawable/ic_chevron_right_white_24dp" />
-
 
         </LinearLayout>
     </RelativeLayout>
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_below="@id/rel1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/splash_logo" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/splash_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.35"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rel1"
+        app:layout_constraintVertical_bias="0.15"
+        app:layout_constraintWidth_percent="0.55" />
 
     <TextView
         android:id="@+id/tv_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/img"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:text="@string/version"
-        android:textColor="@color/gray" />
+        android:textColor="@color/gray"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img" />
 
     <Button
         android:id="@+id/btn_update"
-        android:layout_width="145dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_version"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/back_fifteen_radius_blue"
-        android:drawableRight="@drawable/ic_refresh_white_24dp"
+        android:drawableStart="@drawable/ic_refresh_white_24dp"
+        android:layoutDirection="rtl"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="@string/search_for_update"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_version"
+        app:layout_constraintVertical_bias="0.15"
+        app:layout_constraintWidth_percent="0.4" />
 
     <Button
-        android:layout_width="145dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn_update"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/back_fifteen_radius_green"
-        android:drawableRight="@drawable/ic_phone_in_talk_white_24dp"
+        android:drawableStart="@drawable/ic_phone_in_talk_white_24dp"
+        android:layoutDirection="rtl"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="@string/call_suppprt"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_update"
+        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintWidth_percent="0.4" />
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
