--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,6 +46,12 @@
         <item name="android:paddingLeft">15dp</item>
 
     </style>
+    <style name="gray_16">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/darkGray</item>
+
+    </style>
 
     <style name="title_text">
         <item name="android:textStyle">bold</item>
