--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -214,16 +214,84 @@
                 app:layout_constraintTop_toBottomOf="@id/view2" />
 
             <CheckBox
+                android:id="@+id/checkbox"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="10dp"
+                android:button="@drawable/cb_selector"
+                android:gravity="right"
                 android:layoutDirection="rtl"
-                android:text="تمامی قوانین و مقررات سفیران را می پذیرم"
                 android:textColor="#000"
                 android:textDirection="rtl"
                 app:layout_constraintHeight_percent="0.1"
+                app:layout_constraintHorizontal_bias="1"
                 app:layout_constraintLeft_toLeftOf="@id/inner_guidelineLeft"
                 app:layout_constraintRight_toRightOf="@id/inner_guidelineRight"
+                app:layout_constraintTop_toBottomOf="@id/space3"
+                app:layout_constraintWidth_percent="0.045" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guide_right"
+                android:layout_width="2dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.26" />
+
+            <TextView
+                android:id="@+id/tv1"
+                style="@style/text_black_15"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:gravity="right"
+                android:layoutDirection="rtl"
+                android:paddingRight="5dp"
+                android:text="تمامی"
+                app:layout_constraintHeight_percent="0.1"
+                app:layout_constraintHorizontal_bias="1"
+                app:layout_constraintLeft_toRightOf="@id/guide_right"
+                app:layout_constraintRight_toLeftOf="@id/checkbox"
+                app:layout_constraintTop_toBottomOf="@id/space3" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guide_mid"
+                android:layout_width="2dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.54" />
+
+            <TextView
+                android:id="@+id/tv_laws"
+                style="@style/text_blue_14"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:autoLink="web"
+                android:gravity="right"
+                android:layoutDirection="rtl"
+                android:text="@string/linkToSite"
+                app:layout_constraintHeight_percent="0.1"
+                app:layout_constraintHorizontal_bias="1"
+                app:layout_constraintLeft_toRightOf="@id/guide_mid"
+                app:layout_constraintRight_toLeftOf="@id/tv1"
+                app:layout_constraintTop_toBottomOf="@id/space3" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guide_left"
+                android:layout_width="2dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.57" />
+
+            <TextView
+                style="@style/text_black_15"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:autoLink="web"
+                android:gravity="right"
+                android:layoutDirection="rtl"
+                android:text="سفیران را می پذیرم"
+                app:layout_constraintHeight_percent="0.1"
+                app:layout_constraintHorizontal_bias="1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/guide_mid"
                 app:layout_constraintTop_toBottomOf="@id/space3" />
 
 
